# mira

./: .buildinfo  .gitignore  CHANGELOG.md  CNAME  README.md  genindex.html  index.html  objects.inv  output.json  output.txt  pyproject.toml  search.html  searchindex.js
.binder/: requirements.txt
_sources/: index.ipynb  index.md
_sources/info/: index.ipynb  index.md  typography.ipynb
_sources/mirapolis/: about.md  ch02.md  ch04.md  ch05.md  ch06.md  ch07.md  ch09.md  ch10.md  index.md
_static/images/: favicon.svg.backup  logo-square.svg.backup  logo.svg.backup  logo_horizont.svg.backup
_static/styles/: styles.css  styles.css.backup
book/: _config.yml  _toc.yml  index.md
book/info/: faq.md
book/mirapolis/: ch01.md  ch04.md
book/mirapolis/images/: logo_mirapolis_big.xcf
docs/: _config.yml  _toc.yml
docs/info/: index.md  typography.md
docs/mirapolis/: ch01.md  ch02.md  ch03.md  ch04.md  ch08.md  index.md
docs/mirapolis/images/: logo-mirapolis-big.xcf
info/: faq.html  index.html  typography.html
mirapolis/: about.html  ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  ch07.html  ch08.html  ch09.html  ch10.html  index.html  typography.html
