#======================================================================================================================
# Poetry: Python dependency management and packaging made easy
#======================================================================================================================
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "mira"
version = "2024.01.14"
description = "Инструкция Профессии будущего"
authors = ["Alexander Krasnikov <askrasnikov@gmail.com>"]
maintainers = ["askras <askrasnikov@gmail.com>"]
license = "CC BY 4.0"
readme = "README.md"
homepage = "https://mira.bookseer.org"
repository = "http://github.com/bookseer/mira"
documentation = "https://mira.bookseer.org/docs.html"
keywords = ["keywords"]
packages = [{include = "docs"}]
exclude = [""]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: CC BY 4.0 License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education"
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bookseer/mira/issues"


[tool.poetry.dependencies]
python = "^3.10"
pip = "^23.3.1"
lxml = "4.9.4"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.0.0"
notebook = "^7.0.0"

[tool.poetry.group.dev.dependencies]
ghp-import = "^2.1.0"
jupyter-book = "^0.15.1"
poetry-exec-plugin = "^0.3.6"
poetry-plugin-export = "^1.6.0"
pyautogui = "^0.9.54"
pyppeteer = "^1.0.2"
termtosvg = "^1.1.0"

[tool.poetry.group.test.dependencies]
bandit = {extras = ["toml"], version = "^1.7.6"}
black = "^23.12.0"
isort = "^5.13.1"
mypy = "^1.7.1"
nbqa = "^1.7.1"
pre-commit = "^3.6.0"
pre-commit-hooks = "^4.5.0"
pylint = "^3.0.3"
pytest = "^7.4.3"
pyupgrade = "^3.15.0"

[tool.poetry.group.binder.dependencies]
ipywidgets = "^8.1.1"
jupytext = "^1.16.0"
sphinx-click = "^5.1.0"
sphinx-inline-tabs = "^2023.4.21"
sphinx-proof = "^0.1.3"
sphinx-togglebutton = "^0.3.2"
#sphinxext-rediraffe = "^0.2.7"
tqdm = "^4.66.1"


[tool.poetry.extras]


[tool.poetry.scripts]


[tool.poetry-exec-plugin.commands]
# Init this repo
install = """
poetry install;
pre-commit install;
"""

# Export all dependencies to requirements.rxt and requirements-dev.rxt.
export = """
poetry lock
echo 'Exports dependencies to requirements.rxt'
poetry export --format requirements.txt --output requirements.txt --without-hashes --without=dev --without=test
echo 'Exports developer dependencies to requirements-dev.txt.'
poetry export --format requirements.txt --output requirements-dev.txt --without-hashes
echo 'Exports dependencies to ./binder/requirements.rxt'
poetry export --format requirements.txt --output ./.binder/requirements.txt --without-hashes --only=binder --only=main
"""

# Update this repo
update = """
poetry update --version;
poetry update;
poetry exec export;
pre-commit autoupdate --freeze;
poetry show --top-level --outdated;
"""

# Run pre-commit
precommit = "pre-commit run --all-files"

# Start Jupyter  Notebook without token.
notebook = "python -m jupyter notebook --allow-root --NotebookApp.token='' --NotebookApp.password=''"

# Deactivate virtual environment.
stop = "deactivate; exit"

# Build book
check = """
jupyter-book build  --all --builder linkcheck ./docs
"""

# Build book
build = """
jupyter-book build  --all --builder linkcheck ./docs
jupyter-book build  --all --builder html ./docs
jupyter-book build  --all --builder pdflatex ./docs
cp -aT ./docs/_build/latex/book.pdf ./docs/_static/download/prof.pdf
"""

# Build and publish book
publish = """
poetry exec build
ghp-import ./docs/_build/html --no-jekyll --push --force --cname=mira.bookseer.org
"""

